force-app/main/default/objects/Shipment__c/Shipment__c.object-meta.xml
<CustomObject>
    <label>Shipment</label>
    <nameField>
        <displayFormat>SHP-{00000}</displayFormat>
        <label>Shipment Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Shipments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>