force-app/main/default/objects/Shipment__c/fields/Estimated_Delivery_Date__c.field-meta.xml
<CustomField>
    <fullName>Estimated_Delivery_Date__c</fullName>
    <label>Estimated Delivery Date</label>
    <type>Date</type>
</CustomField>