force-app/main/default/objects/Shipment__c/fields/Outbound_Order__c.field-meta.xml
<CustomField>
    <fullName>Outbound_Order__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Outbound Order</label>
    <referenceTo>Outbound_Order__c</referenceTo>
    <relationshipLabel>Shipments</relationshipLabel>
    <relationshipName>Shipments</relationshipName>
    <type>Lookup</type>
</CustomField>