force-app/main/default/objects/Shipment__c/fields/Shipped_At__c.field-meta.xml
<CustomField>
    <fullName>Shipped_At__c</fullName>
    <label>Shipped At</label>
    <type>DateTime</type>
</CustomField>