force-app/main/default/objects/Shipment__c/validationRules/Tracking_Required_When_Shipped.validationRule-meta.xml
<ValidationRule>
    <fullName>Tracking_Required_When_Shipped</fullName>
    <active>true</active>
    <errorConditionFormula>AND(OR(ISPICKVAL(Status__c, "Shipped"), ISPICKVAL(Status__c, "In Transit"), ISPICKVAL(Status__c, "Delivered")), OR(ISBLANK(Carrier__c), ISBLANK(Tracking_Number__c)))</errorConditionFormula>
    <errorMessage>Carrier and tracking number are required after a shipment leaves the warehouse.</errorMessage>
</ValidationRule>